<resources>
    <string name="app_name">FinanceTracker</string>
    <string name="title_records">Income and Expense Entry</string>
    <string name="title_Transaction_History">Transaction History</string>
    <string name="title_analysis">Analysis</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="menu_logout">Logout</string>

    <string name="confirmation_title">Confirmation</string>
    <string name="logout_msg">Do you want to logout?</string>
    <string name="yes_button">YES</string>
    <string name="no_button">NO</string>

    <string name="dashboard_hello">Hello,</string>
    <string name="dashboard_account">Account</string>
    <string name="dashboard_income">Total Income</string>
    <string name="dashboard_expense">Total Expense</string>
    <string name="dashboard_balance_text">Available balance</string>

    <string name="financial_data_title">Income and Expense</string>
    <string name="financial_data_submit">Submit</string>
    <string name="financial_data_Description">Description</string>
    <string name="financial_data_Category">Category</string>
    <string name="financial_data_Amount">Amount</string>
    <string name="financial_data_date">Date</string>
    <string name="financial_data_type">Type</string>
    <string name="financial_income">Income</string>
    <string name="financial_expense">Expense</string>

    <string name="history_SortbyIncome">Sort by Income</string>
    <string name="history_SortByExpense">Sort by Expense</string>
    <string name="login_project_name">PERSONAL FINANCE TRACKER</string>
    <string name="login_name">LOGIN</string>
    <string name="login_enter_details">Please Enter Your Details</string>
    <string name="login_login_button">Login</string>
    <string name="login_account_text">Don\'t have an account?</string>
    <string name="login_register_button">Register</string>
    <string name="login_emailId_hint">Email ID</string>
    <string name="login_password_hint">Password</string>

    <string name="analysis_title">INSIGHTS</string>
    <string name="analysis_expense">EXPENSE</string>
    <string name="analysis_income">INCOME</string>
    <string name="entire_data">All</string>

    <string name="registration_title">REGISTRATION </string>
    <string name="registration_enter_details">Please enter the below details </string>
    <string name="registration_name">Enter your Name</string>
    <string name="registration_emailId">Enter your Email Id</string>
    <string name="registration_password">Enter your password</string>
    <string name="registration_re_password">Re-Enter your Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>