<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_finance_tracker"
    android:label="@string/title_records"
    app:startDestination="@id/menu_dashboard">

    <fragment
        android:id="@+id/menu_dashboard"
        android:name="com.capgemini.financetracker.view.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />
    <fragment
        android:id="@+id/menu_analysis"
        android:name="com.capgemini.financetracker.view.AnalysisFragment"
        android:label="@string/title_analysis"
        tools:layout="@layout/fragment_analysis" />
    <fragment
        android:id="@+id/menu_transaction_history"
        android:name="com.capgemini.financetracker.view.TransactionHistoryFragment"
        android:label="Transaction History"
        tools:layout="@layout/fragment_transaction_history_list" />
    <fragment
        android:id="@+id/menu_record"
        android:name="com.capgemini.financetracker.view.FinancialDataEntryFragment"
        android:label="fragment_financial_data_entry"
        tools:layout="@layout/fragment_financial_data_entry" />
</navigation>